# memocalc

./: Cargo.toml  LICENSE  README.md  install_MACOS.sh  test.sh
.github/workflows/: deploy.yml
src/: cli.rs  main.rs
src/cli/: addition.rs  division.rs  game.rs  multiplication.rs  subtraction.rs
