[package]
name = "memocalc"
version = "1.0.0"
description = "A useful tool for practicing mental mathematics."
authors = ["importly", "eternalmoon1234"]
edition = "2018"
homepage = "https://github.com/memomath/memocalc#readme"
repository = "https://github.com/memomath/memocalc"
license = "MIT"
exclude = [
    "assets/*"
]

[dependencies]
colored = "2.0.0"
rand = "0.8.3"
